DNN-10023: Fixed z-index issues.

--- a/src/Modules/Content/Dnn.PersonaBar.Pages/Pages.Web/src/components/dnn-persona-bar-page-treeview/src/InContextMenu/style.less
+++ b/src/Modules/Content/Dnn.PersonaBar.Pages/Pages.Web/src/components/dnn-persona-bar-page-treeview/src/InContextMenu/style.less
@@ -40,7 +40,7 @@
             right: -18px;
             top: 35px;
             text-align: left;
-            z-index: 1000;
+            z-index: 9999;
             min-width: 200px;
             border: 1px solid @alto;
             border-radius: 3px;
@@ -48,6 +48,5 @@
             list-style: none;
             padding: 10px 0px;
             box-shadow: 0px 0px 30px 0px rgba(0, 0, 0, 0.1);
-            z-index: 1000
         }
     }
