--- a/src/Modules/Content/Dnn.PersonaBar.Pages/Pages.Web/src/components/dnn-persona-bar-page-treeview/src/styles.less
+++ b/src/Modules/Content/Dnn.PersonaBar.Pages/Pages.Web/src/components/dnn-persona-bar-page-treeview/src/styles.less
@@ -107,7 +107,6 @@
         display: inline-block;
         position: relative;
         width: 90px;
-        z-index: 9998;
         top: 2px;
         left: 5px;
         font-size: 18px;
